--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,13 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.team2.crapmap.MainActivity">
+    tools:context="ca.team2.crapmap.MapsActivity">
 
-    <fragment android:id="@+id/map"
+    <fragment android:id="@+id/map_fragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ca.team2.crapmap.MapsActivity" />
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
