adding initial new bathroom view, logic and endpoint connections

--- a/app/app/src/main/res/layout/activity_new_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_new_bathroom.xml
@@ -9,12 +9,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ca.team2.crapmap.NewBathroomActivity">
-
-    <TextView
-        android:text="bathroom creation form goes here"
+    <Button
+        android:id="@+id/new_bathroom_back"
+        android:text="Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/new_bathroom_name"
+        android:hint="Bathroom Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/new_bathroom_back"
+        android:layout_centerHorizontal="true"/>
+    <Button
+        android:id="@+id/new_bathroom_submit"
+        android:text="Submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView2" />
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
