--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_comment"
     android:layout_width="match_parent"
@@ -17,4 +18,5 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/textView" />
+
 </RelativeLayout>
