--- a/app/app/src/main/res/layout/info_window_bathroom.xml
+++ b/app/app/src/main/res/layout/info_window_bathroom.xml
@@ -19,6 +19,11 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/open_status_preview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/requires_purchase_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
