--- a/app/app/src/main/res/layout/activity_new_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_new_bathroom.xml
@@ -37,133 +37,148 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/new_bathroom_requires_purchase"
         android:textColor="@color/colorBlack"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
     <CheckBox
         android:id="@+id/monday"
         android:text="@string/label_monday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hours"/>
-    <Spinner
+    <TextView
         android:id="@+id/mondayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hours"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/mondayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hours"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <CheckBox
         android:id="@+id/tuesday"
         android:text="@string/label_tuesday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/monday"/>
-    <Spinner
+    <TextView
         android:id="@+id/tuesdayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/monday"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/tuesdayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/monday"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <CheckBox
         android:id="@+id/wednesday"
         android:text="@string/label_wednesday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tuesday"/>
-    <Spinner
+    <TextView
         android:id="@+id/wednesdayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tuesday"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/wednesdayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tuesday"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <CheckBox
         android:id="@+id/thursday"
         android:text="@string/label_thursday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/wednesday"/>
-    <Spinner
+    <TextView
         android:id="@+id/thursdayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/wednesday"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/thursdayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/wednesday"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <CheckBox
         android:id="@+id/friday"
         android:text="@string/label_friday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/thursday"/>
-    <Spinner
+    <TextView
         android:id="@+id/fridayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/thursday"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/fridayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/thursday"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <CheckBox
         android:id="@+id/saturday"
         android:text="@string/label_saturday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/friday"/>
-    <Spinner
+    <TextView
         android:id="@+id/saturdayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/friday"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/saturdayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/friday"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <CheckBox
         android:id="@+id/sunday"
         android:text="@string/label_sunday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/saturday"/>
-    <Spinner
+    <TextView
         android:id="@+id/sundayStart"
+        android:hint="Open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/saturday"
-        android:layout_marginLeft="150dp"></Spinner>
-    <Spinner
+        android:layout_marginLeft="150dp"/>
+    <TextView
         android:id="@+id/sundayEnd"
+        android:hint="Close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/saturday"
-        android:layout_marginLeft="250dp"></Spinner>
+        android:layout_marginLeft="250dp"/>
     <Button
         android:id="@+id/new_bathroom_submit"
         android:text="@string/label_submit"
