--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -11,23 +11,8 @@
         android:layout_height="match_parent"
         android:layout_weight="0.34">
 
-        <ImageView
-            android:id="@+id/imgBathroom"
-            android:layout_width="358dp"
-            android:layout_height="248dp"
-            android:layout_weight="0.34"
-            android:elevation="-1dp"
-            app:srcCompat="@android:drawable/ic_menu_gallery"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.06" />
-
         <RatingBar
-            android:id="@+id/rb"
+            android:id="@+id/rating_average_accessibility"
             style="@style/Widget.AppCompat.RatingBar.Indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,154 +21,119 @@
             android:numStars="5"
             android:rating="3"
             android:visibility="visible"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintHorizontal_bias="0.877"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.246" />
-
-        <EditText
-            android:id="@+id/bathroomName"
-            android:layout_width="151dp"
-            android:layout_height="25dp"
-            android:background="@color/colorPrimaryLight"
-            android:ems="10"
-            android:inputType="textPersonName"
-
-            android:text="Cool Loo"
-            android:textAlignment="center"
-            tools:layout_constraintRight_creator="1"
+            app:layout_constraintVertical_bias="0.117"
             tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toTopOf="@+id/rb"
-            app:layout_constraintRight_toRightOf="parent"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="240dp"
-            tools:layout_constraintTop_creator="1"
             tools:layout_constraintRight_creator="1"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/imgBathroom"
-            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintTop_creator="1" />
+
+        <RatingBar
+            android:id="@+id/rating_average_availability"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryLight"
+            android:isIndicator="false"
+            android:numStars="5"
+            android:rating="3"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.877"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="1.0">
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.21"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1" />
 
-            <RatingBar
-                android:id="@+id/ratingBar2"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="13dp"
-                android:layout_marginTop="18dp"
-                android:background="@color/colorPrimaryLight"
-                android:elevation="7dp"
-                android:isIndicator="false"
-                android:numStars="5"
-                android:rating="4"
-                android:stepSize="1"
-                android:visibility="visible"
-                tools:layout_editor_absoluteX="72dp"
-                tools:layout_editor_absoluteY="133dp" />
+        <RatingBar
+            android:id="@+id/rating_average_cleanliness"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryLight"
+            android:isIndicator="false"
+            android:numStars="5"
+            android:rating="3"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.877"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.303"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1" />
 
-            <RatingBar
-                android:id="@+id/ratingBar4"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/editText8"
-                android:layout_alignEnd="@+id/editText8"
-                android:background="@color/colorPrimaryLight"
-                android:elevation="7dp"
-                android:isIndicator="false"
-                android:numStars="5"
-                android:rating="2"
-                android:stepSize="1"
-                android:visibility="visible"
-                tools:layout_editor_absoluteX="72dp"
-                tools:layout_editor_absoluteY="133dp" />
+        <TextView
+            android:id="@+id/text_cleanliness"
+            android:layout_width="152dp"
+            android:layout_height="19dp"
+            android:text="Cleanliness::"
+            android:textAlignment="textEnd"
+            android:textSize="14sp"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="152dp" />
 
-            <EditText
-                android:id="@+id/review_content"
-                style="@style/Widget.AppCompat.AutoCompleteTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:padding="0dp"
-                android:paddingStart="5dp"
-                android:singleLine="true"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="10sp"
-                tools:text="This bathroom is decent."
-                android:layout_below="@+id/review_name"
-                android:layout_alignStart="@+id/review_name"
-                android:layout_alignEnd="@+id/ratingBar2" />
+        <TextView
+            android:id="@+id/text_availability"
+            android:layout_width="152dp"
+            android:layout_height="19dp"
+            android:text="Availability:"
+            android:textAlignment="textEnd"
+            android:textSize="14sp"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="108dp" />
 
-            <EditText
-                android:id="@+id/editText8"
-                style="@style/Widget.AppCompat.AutoCompleteTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                android:layout_alignEnd="@+id/review_content"
-                android:layout_alignStart="@+id/editText7"
-                android:layout_below="@+id/editText7"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:padding="0dp"
-                android:paddingStart="5dp"
-                android:singleLine="true"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="10sp"
-                tools:text="Worst bathroom ever." />
+        <TextView
+            android:id="@+id/text_accessibility"
+            android:layout_width="152dp"
+            android:layout_height="19dp"
+            android:text="Accessibility:"
+            android:textAlignment="textEnd"
+            android:textSize="14sp"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="64dp" />
 
-            <EditText
-                android:id="@+id/review_name"
-                style="@style/Widget.AppCompat.AutoCompleteTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                android:layout_alignBottom="@+id/ratingBar2"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="12dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:padding="0dp"
-                android:paddingStart="5dp"
-                android:singleLine="true"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                tools:text="Rob Bob" />
+        <TextView
+            android:id="@+id/text_bathroom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="bathroom_name"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="126dp"
+            tools:layout_editor_absoluteY="16dp" />
 
-            <EditText
-                android:id="@+id/editText7"
-                style="@style/Widget.AppCompat.AutoCompleteTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                android:layout_alignStart="@+id/review_content"
-                android:layout_below="@+id/review_content"
-                android:layout_marginTop="32dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:padding="0dp"
-                android:paddingStart="5dp"
-                android:singleLine="true"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                tools:text="Dan the Man" />
-        </RelativeLayout>
+        <Button
+            android:id="@+id/button2"
+            style="@android:style/Widget.Material.Light.Button.Inset"
+            android:layout_width="79dp"
+            android:layout_height="65dp"
+            android:elevation="7dp"
+            android:text="+"
+            android:textSize="30sp"
+            android:visibility="visible"
+            tools:layout_editor_absoluteX="289dp"
+            tools:layout_editor_absoluteY="430dp" />
+
+        <ListView
+            android:id="@+id/review_listView"
+            android:layout_width="358dp"
+            android:layout_height="314dp"
+            tools:layout_editor_absoluteX="13dp"
+            tools:layout_editor_absoluteY="188dp" />
+
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
 
