--- a/app/app/src/main/res/layout/review_row.xml
+++ b/app/app/src/main/res/layout/review_row.xml
@@ -99,7 +99,7 @@
     <LinearLayout
         android:id="@+id/review_row_comment"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
